kubernetes/envs/minikube/rnode/rnode-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aarnode
spec:
  type: NodePort
  selector:
    app: aarnode
  ports:
    - port: 40403
      name: '40403'
      targetPort: 40403
